mobile opt / prevent roundet corners for form elements on ios

--- a/hotelgaedi/src/scss/_gaedi_accordion-items.scss
+++ b/hotelgaedi/src/scss/_gaedi_accordion-items.scss
@@ -46,5 +46,8 @@
   }
   + .wp-block-group {
     margin-top: toRem(140);
+    @include media($until: 'md') {
+      margin-top: toRem(60);
+    }
   }
 }
