--- a/hotelgaedi/src/scss/_gaedi_section-75percent-image-text-white-bg.scss
+++ b/hotelgaedi/src/scss/_gaedi_section-75percent-image-text-white-bg.scss
@@ -54,7 +54,7 @@
           }
 
           @include media($until: 'sm') {
-            margin-top: 20vh;
+            margin-top: 24vh;
           }
           @include media($until: 'lg') {
             p {
